# open-wallpaper-engine

./: .gitignore  0001-chore-support-windows.patch  CMakeLists.txt  CMakePresets.json  vcpkg.json
host/: main.cpp  proto.hpp
src/: CMakeLists.txt  SceneWallpaper.cpp  WPParticleParser.cpp  WPPuppet.cpp  WPShaderValueUpdater.cpp
src/Core/: Literals.hpp
src/Fs/include/Fs/: PhysicalFs.h
src/Particle/: WPParticleRawGener.cpp
src/RenderGraph/: RenderGraph.cpp
src/Scene/include/Scene/: SceneRenderTarget.h
src/Swapchain/: TripleSwapchain.hpp
src/Utils/: Algorism.cpp  CMakeLists.txt  DynamicLibrary.cpp  FpsCounter.cpp  Logging.cpp  Sha.cpp
src/Vulkan/: CMakeLists.txt  Device.cpp  Instance.cpp  Shader.cpp  StagingBuffer.cpp  Swapchain.cpp  TextureCache.cpp  vulkan_wrapper.cpp
src/Vulkan/include/Vulkan/: Parameters.hpp  Shader.hpp  ShaderComp.hpp  TextureCache.hpp  VulkanExSwapchain.hpp
src/Vulkan/include/vvk/: handle.hpp  vma_wrapper.hpp  vulkan_wrapper.hpp
src/VulkanRender/: CMakeLists.txt  CustomShaderPass.cpp  FinPass.cpp  RenderDoc.h  VulkanPass.hpp  VulkanRender.cpp
standalone_view/: CMakeLists.txt  arg.hpp  glfwviewer.cpp
tests/: dump.cpp
tests/fixtures/mdlv_14/: 2835012244.json
tests/fixtures/pkgv_0017/: 1864677589.json  2094043344.json
tests/version/: mdlv_14_test.cpp
